# layout_detection

./: .gitignore  main.py  pyproject.toml  requirements.txt  trial.ipynb
src/: config.py  detect_boxes.py  detector.py  loader.py  page_classifier.py  preprocessor.py  visualizer.py
