[project]
name = "layout-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "ipykernel>=7.1.0",
    "langchain>=1.0.8",
    "langchain-core>=1.1.0",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.0",
    "ollama>=0.6.1",
    "numpy>=2.2.6",
    "pdf2image>=1.17.0",
    "tqdm>=4.67.1",
    "matplotlib>=3.10.7",
    "surya-ocr>=0.17.0",
    "opencv-python>=4.11.0.86",
]
